--- a/master.css
+++ b/master.css
@@ -43,6 +43,35 @@ ul.blueheader li.right {
     ul.blueheader li {
       float: none;
     }
+    /*#name{
+    margin-top: -500px;
+    margin-bottom: 500px;
+    margin-left: 30%;
+      align-items: center;
+      color: white;
+      z-index:90;
+      position: absolute;
+    }*/
+    div#personaltitle{
+      background-color: #72DFBC;
+      height: 600px;
+      width: 600px;
+      border-radius: 50%;
+      opacity: .6;
+      /*margin-left: 30%;*/
+      margin-left: 25%;
+    }
+}
+@media screen and (min-width: 600px){
+  div#personaltitle{
+    background-color: #72DFBC;
+    height: 600px;
+    width: 600px;
+    border-radius: 50%;
+    opacity: .6;
+    /*margin-left: 30%;*/
+    margin-left: 25%;
+  }
 }
 /*main image is blurred*/
 /*img.mainimg {
@@ -60,6 +89,7 @@ div#personaltitle{
   width: 600px;
   border-radius: 50%;
   opacity: .6;
+  /*margin-left: 30%;*/
   margin-left: 30%;
 }
 
@@ -67,10 +97,10 @@ div#personaltitle{
 margin-top: -500px;
 margin-bottom: 500px;
 margin-left: 40%;
-  align-items: center;
-  color: white;
-  z-index:90;
-  position: absolute;
+align-items: center;
+color: white;
+z-index:90;
+position: absolute;
 }
 #namej{
   font-size: 65px;
@@ -137,7 +167,7 @@ div.parallaxblur{
   width: 5em;
   text-align: center;
   text-decoration-color: blue;
-  margin-right: -30%;
+  margin-right: -13%;
   margin-left: 10%;
   /*border: lightgrey 3px solid;*/
   /*padding-right: -20%;*/
@@ -226,7 +256,8 @@ li{
   text-decoration:underline;
 }
 .projectsimg{
-  height:600px;
+  height:300px;
+  /*height:600px;*/
   /*background-color:#F2F2F2;*/
   background-color: #4B927C;
   /*background-color: #8DA1F7;*/
@@ -240,6 +271,22 @@ li{
   background-color: #4B927C;
   /*background-color: #8DA1F7;*/
   font-size:36px;
+}
+.flexmainpoints{
+  display: flex;
+  margin-left: 12%;
+  margin-top: -8%;
+}
+.mainpoints{
+  border: lightgrey 3px solid;
+  /*margin-top: 45%;*/
+  margin-top: 45%;
+  height: 20%;
+  width: 50%;
+  padding-right: 20%;
+  margin-right: 15%;
+  margin-left: 5%;
+  padding-left: 20%
 }
 div.parallax4 {
   background-image: url("images/union-station.jpg");
@@ -342,6 +389,7 @@ div.descmywinssite{
 .furthercontact{
   /*background-color: #58AC91;*/
   background-color: white;
+  /*z-index: 90;*/
 }
 .socialicons{
   background-color: #275F4D;
