--- a/master.css
+++ b/master.css
@@ -233,6 +233,9 @@ div.obj{
   background-size: 50%;
   background-position: right;
 }
+li{
+  font-size: 20px;
+}
 document.querySelector('.hello').scrollIntoView({
   behavior: 'smooth'
 });
@@ -249,11 +252,13 @@ document.querySelector('.hello').scrollIntoView({
 .skillscolumn{
   columns: 3;
   text-align: center;
-  margin-right: 4%;
-  /*margin-left: 2%;*/
+  margin-right: 20%;
+  margin-left: -5%;
   /*break-inside: avoid-column;*/
   break-inside: avoid;
   margin-top: 15%;
+  background-color: #4B927C;
+  border-radius: 3%;
 }
 li{
   break-inside: avoid-column;
@@ -276,7 +281,7 @@ li{
   text-decoration:underline;
 }
 .projectsimg{
-  height:300px;
+  height:650px;
   /*height:600px;*/
   /*background-color:#F2F2F2;*/
   background-color: #4B927C;
@@ -322,7 +327,6 @@ div.parallax4 {
   background-size: cover;
 }
 div.parallax3 {
-  /*background-image: url("images/aspen-maroon-bells.jpg");*/
   display: flex;
   columns: 2;
   min-height: 725px;
