--- a/master.css
+++ b/master.css
@@ -224,7 +224,7 @@ div.imgcolor{
   background-position: right;
 }
 #mywinstitle{
-  margin-left: 20%;
+  margin-left: 35%;
   margin-right: 5%;
   margin-top: 10%;
 }
@@ -267,7 +267,8 @@ document.querySelector('.hello').scrollIntoView({
   break-inside: avoid;
   margin-top: 15%;
   background-color: #4B927C;
-  border-radius: 3%;
+  border-radius: 25px;
+  padding: 2%;
 }
 li{
   break-inside: avoid-column;
@@ -411,7 +412,7 @@ div.descmywinssite{
   align-items: center;
   margin-left: 40%;
   margin-top: 5%;
-  border-radius: 5px;
+  border-radius: 25px;
 }
 #emailmebutton:hover{
   background-color: grey;
@@ -460,7 +461,9 @@ margin-left: 46.8%;
   /*color:#58AC91;*/
   color: #275F4D;
   font-size: 50px;
-  margin-left: 10%;
+  margin-left: 40%;
+  margin-right: 20%;
+
 }
 /*snow*/
 #snow{
