updated a few projects title to be more responsive

--- a/master.css
+++ b/master.css
@@ -275,12 +275,15 @@ li{
 }
 .projectstitle{
   text-align: center;
+  width: 100%;
 }
 #fewproj{
   font-size: 60px;
   color: white;
-  margin-top: 100px;
-  margin-left: 550px;
+  margin-top: 110px;
+  /*margin-left: 550px;*/
+  /*margin-left: 5%;*/
+
 }
 #skillstitle{
   align: center;
