add basic layout for new website

--- a/master.css
+++ b/master.css
@@ -1,543 +1,50 @@
-body{
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+:root {
+  --jumbotron-padding-y: 3rem;
 }
 
-ul.blueheader {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #72DFBC;
+.jumbotron {
+  padding-top: var(--jumbotron-padding-y);
+  padding-bottom: var(--jumbotron-padding-y);
+  margin-bottom: 0;
+  background-color: #fff;
 }
-.headerlinks:hover{
-  border-bottom: 4px white solid;
-}
-ul.blueheader li {
-float: left;
-}
-
-ul.blueheader li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-ul.blueheader li a.active {
-  background-color: #4CAF50;
-}
-
-ul.blueheader li.right {
-  float: right;
-  padding-right: 1%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  font-size: 20px;
-  font-style: bold;
-}
-/*navbar switches to vertical */
-@media screen and (max-width: 600px){
-    ul.blueheader li.right,
-    ul.blueheader li {
-      float: none;
-    }
-    /*#name{
-    margin-top: -500px;
-    margin-bottom: 500px;
-    margin-left: 30%;
-      align-items: center;
-      color: white;
-      z-index:90;
-      position: absolute;
-    }*/
-    div#personaltitle{
-      background-color: #72DFBC;
-      height: 600px;
-      width: 600px;
-      border-radius: 50%;
-      opacity: .6;
-      /*margin-left: 30%;*/
-      margin-left: 25%;
-    }
-}
-@media screen and (min-width: 600px){
-  div#personaltitle{
-    background-color: #72DFBC;
-    height: 600px;
-    width: 600px;
-    border-radius: 50%;
-    opacity: .6;
-    /*margin-left: 30%;*/
-    margin-left: 25%;
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: calc(var(--jumbotron-padding-y) * 2);
+    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
   }
 }
-/*main image is blurred*/
-/*img.mainimg {
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
-}*/
 
-#circleblue{
-  margin-top: -670px;
-
-}
-div#personaltitle{
-  background-color: #72DFBC;
-  height: 600px;
-  width: 600px;
-  border-radius: 50%;
-  opacity: .6;
-  /*margin-left: 30%;*/
-  margin-left: 30%;
+.jumbotron p:last-child {
+  margin-bottom: 0;
 }
 
-#name{
-margin-top: -500px;
-margin-bottom: 500px;
-margin-left: 40%;
-align-items: center;
-color: white;
-z-index:90;
-position: absolute;
+.jumbotron-heading {
+  font-weight: 300;
 }
-#namej{
-  font-size: 65px;
-  margin-left:-15%;
-  margin-top:20%;
-  font-style: bold;
-}
-#namef{
-  font-size: 40px;
-  margin-left: -19%;
-  margin-top: -8%;
-}
-div.parallax1 {
-    background-image: url("images/aspen-maroon-bells.jpg");
 
-    /* Set a specific height */
-    min-height: 725px;
+.jumbotron .container {
+  max-width: 40rem;
+}
 
-    margin: 0;
-    padding:0;
-    border: none;
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    /*-webkit-filter: blur(2px);
-    filter: blur(2px);*/
-}
-div.parallaxblur{
-  -webkit-filter: blur(2px);
-  filter: blur(2px);
-}
-.yearsexp{
-  display: flex;
-  columns: 2;
-  height:300px;
-  background-color: white;
-  font-size:36px;
-}
-.ongoingproj{
-  align-items: center;
-  padding-left: 15%;
-  padding-right: 4%;
-  float: right;
-}
-.linecolor{
-  /*color: #58AC91;*/
-  /*background: #58AC91;*/
-  width: 80%;
-  margin-left: 10%;
-  color: blue;
-}
-hr.linecolor{
-  color: blue;
-  font-weight: bold;
-}
-.titleongoing{
-  float: left;
-  padding-left: 10%;
-}
-#aboutmetext{
-  font-size: 45px;
-  /*margin-top: -6%;*/
-  width: 5em;
-  text-align: center;
-  text-decoration-color: blue;
-  margin-right: -13%;
-  margin-left: 10%;
-  /*border: lightgrey 3px solid;*/
-  /*padding-right: -20%;*/
-}
-#techtext{
-  font-size: 45px;
-  /*width: 5em;*/
-  text-align: center;
-  text-decoration-color: blue;
-  /*margin-right: -13%;*/
-  margin-left: -3%;
-
-  /*margin-left: 10%;*/
-}
-#borderboxabout{
-  border: lightgrey 3px solid;
-  margin-top: 8%;
-  padding-right: 17%;
-}
-#borderboxtech{
-  border: lightgrey 3px solid;
-  margin-top: 25%;
-  margin-left: 20%;
-  /*padding-right: 17%;*/
-  margin-right: 30%;
-}
-div.parallax2 {
-    display: flex;
-    columns: 2;
-    min-height: 500px;
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-border:none;
-}
-div.colored{
-  width: 50%;
-  /*background-color: #58AC91;*/
-}
-div.imgcolor{
-  background-image: url("images/mywins.png");
-  float: right;
-  width: 50%;
-  height:auto;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: right;
-}
-#mywinstitle{
-  margin-left: 35%;
-  margin-right: 5%;
-  margin-top: 10%;
-}
-.mywinswords{
-  margin-left: 10%;
-  margin-right: 10%;
-}
-div.obj{
-  float: right;
-  width: 50%;
-  height:auto;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: right;
-}
-li{
-  font-size: 20px;
-}
-document.querySelector('.hello').scrollIntoView({
-  behavior: 'smooth'
-});
-#education{
-  font-size: -5% !important;
-  text-align: center;
-  text-decoration: underline;
-  text-decoration-color: blue;
-}
-.educa{
-  font-size: 30px;
-  margin-top: 4%;
-}
-.skillscolumn{
-  columns: 3;
-  text-align: center;
-  margin-right: 20%;
-  margin-left: -5%;
-  break-inside: avoid;
-  margin-top: 15%;
-  border-radius: 25px;
-  padding: 2%;
-}
-li{
-  break-inside: avoid-column;
-}
-.projectstitle{
-  text-align: center;
-  width: 100%;
-}
-#fewproj{
-  font-size: 60px;
-  color: white;
-  margin-top: 110px;
-  /*margin-left: 550px;*/
-  /*margin-left: 5%;*/
-
-}
-#skillstitle{
-  align: center;
-  text-align: center;
-  margin-top: 10%;
-  font-size: 40px;
-  /*color: white;*/
-  text-decoration:underline;
-}
-.projectsimg{
-  height:550px;
-  /*height:600px;*/
-  /*background-color:#F2F2F2;*/
-  background-color: #4B927C;
-  /*background-color: #8DA1F7;*/
-  font-size:36px;
-  overflow: hidden;
-  display: flex;
-  /*align-items: center;*/
-}
-.socialicons{
-  height:10%;
-  background-color: #4B927C;
-  /*background-color: #8DA1F7;*/
-  font-size:36px;
-}
-.flexmainpoints{
-  display: flex;
-  margin-left: 12%;
-  margin-top: -8%;
-}
-.mainpoints{
-  border: lightgrey 3px solid;
-  /*margin-top: 45%;*/
-  margin-top: 45%;
-  height: 20%;
-  width: 50%;
-  padding-right: 20%;
-  margin-right: 15%;
-  margin-left: 5%;
-  padding-left: 20%
-}
-div.parallax4 {
-  background-image: url("images/union-station.jpg");
-  display: flex;
-  /*columns: 2;*/
-  min-height: 400px;
-  margin: 0;
-  padding:0;
-  border: none;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-div.parallax3 {
-  display: flex;
-  columns: 2;
-  min-height: 725px;
-  margin: 0;
-  padding:0;
-  border: none;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-div.projectimages{
-  display:flex;
-}
-div.projscreenshot {
-  padding-left: 1.5%;
-  text-align: center;
-  margin-top: -250px;
-}
-div.projscreenshot2 {
-  padding-left: 1.5%;
-  padding-top: 2%;
-  /*padding-bottom: 2%;*/
-  text-align: center;
-  /*margin-top: -250px;*/
-}
-.projtitle{
-  text-align: center;
-  /*text-decoration:underline;*/
-}
-.projtitle2{
-  font-size: 35px;
-  size: bold;
-}
-.projdesc{
-  font-size: 18px;
-  padding-left: 3%;
-  padding-right:3%;
-}
-.projimgsize{
-width: 500px;
-height: 300px;
-}
-div.parallax5 {
-  background-image: url("images/snow-forest-trees-winter.jpeg");
-  display: flex;
-  columns: 2;
-  min-height: 400px;
-  margin: 0;
-  padding:0;
-  border: none;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  overflow: hidden;
-}
-div.descmywins{
-  width: 50%;
-  height: 460px;
-  background-color: #58AC91;
-}
-div.descmywinssite{
-  width: 50%;
-  height: 460px;
-  background-color: #58AC91;
-}
-.contactform{
-  color: white;
-  display: flex;
-  flex-direction: column;
-  width: 60%;
-  height: 15%;
-  margin-left: 20%;
-  margin-right: 10%;
-  border-radius: 2px;
-  margin-top: -1%;
-}
-form{
-  margin-left: 50% !important;
-}
-#contactmehr{
-  width: 28%;
-  border: 3px solid grey;
-  margin-left: 35%;
-  margin-top: -3%;
-  margin-bottom: 5%;
-}
-#emailmebutton{
-  border: 3px #58AC91 solid;
-  background-color: #58AC91;
-  color: white;
-  opacity: .9;
-  font-size: 130%;
-  width: 50%;
-  align-items: center;
-  margin-left: 23.5%;
-  margin-top: 5%;
-  border-radius: 25px;
-}
-#emailmebutton:hover{
-  background-color: grey;
-}
-.textemail{
-  height: 30px;
-  /*background-color: #58AC91;*/
-  /*color: white;*/
-  opacity: .9;
-  margin-bottom: 2%;
-  font-size: 15px;
-}
-/*input{
-  flex-direction: row;
-}*/
-.furthercontact{
-  /*background-color: #58AC91;*/
-  background-color: white;
-  /*z-index: 90;*/
-}
-.socialicons{
-  background-color: #275F4D;
-}
-.somethi{
-  columns: 3;
-  height: 150px;
-  width: 100%;
-  background-color: #58AC91;
-}
-#sitemap{
-  margin-left: 5%;
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 #sociallinks{
   margin-left: 33%;
 }
-i{
-  color: white;
-  align-content: center;
-  margin-left: 1.5%;
-  padding-top: 1%;
-  padding-bottom:1%;
+.socialicons{
+  height:10%;
+  /* background-color: #4B927C; */
+  /*background-color: #8DA1F7;*/
+  font-size:36px;
 }
-i:hover{
-  color:#757575;
+.fa{
+  color:#4B927C;
 }
-.downarrow{
-color: white;
-margin-top: -13px;
-margin-bottom: 60px;
-font-size: 80px;
-margin-left: 46.8%;
+footer p {
+  margin-bottom: .25rem;
 }
-#titlecontact{
-  /*color:#58AC91;*/
-  color: #275F4D;
-  font-size: 50px;
-  margin-left: 40%;
-  margin-right: 20%;
 
-}
-/*snow*/
-#snow{
-	font-family: Androgyne;
-	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
-	height: 41%;
-	left: 0;
-	position: absolute;
-	/*top: 0;*/
-	width: 100%;
-	z-index:1;
-	-webkit-animation: snow 10s linear infinite;
-	-moz-animation: snow 10s linear infinite;
-	-ms-animation: snow 10s linear infinite;
-	animation: snow 10s linear infinite;
-}
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-moz-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
-}
-@-webkit-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-ms-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-footer{
-  height: 30px;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #72DFBC;
-  z-index: 90;
-}
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
